syntax = "proto3";
package message_pb;

message RequestHeader {
  uint32 magic = 1;
  uint64 serial = 2;
  uint32 op = 3;
  uint32 length = 4;
}

message ResponseHeader {
  uint32 magic = 1;
  uint64 serial = 2;
  uint32 op = 3;
  uint32 error_code = 4;
  uint32 length = 5;
}